Name:               hsc3-server-internal
Version:            0.4.0
Synopsis:           SuperCollider internal server resource management and synchronization.
Description:
    This library provides an add-on module for @hsc3-server@ that allows to execute @Server@
    actions using an internal server.
    .
    ChangeLog: <https://github.com/kaoskorobase/hsc3-server-internal/blob/master/ChangeLog.md>
License:            GPL
License-File:       LICENSE
Category:           Sound
Copyright:          Copyright (c) Stefan Kersten 2008-2012
Author:             Stefan Kersten
Maintainer:         Stefan Kersten
Stability:          experimental
Homepage:           http://space.k-hornz.de/software/hsc3-server
Tested-With:        GHC == 6.10, GHC == 6.12, GHC == 7.0, GHC == 7.2
Build-Type:         Simple
Cabal-Version:      >= 1.9.2

Library
    Exposed-Modules:
        Sound.SC3.Server.Monad.Process.Internal
    Build-Depends:
        base >= 3 && < 5
      , hsc3-process >= 0.7 && < 0.8
      , hsc3-process-internal >= 0.7 && < 0.8
      , hsc3-server >= 0.4 && < 0.5
    Ghc-Options:
        -W
    Ghc-Prof-Options:
        -W -auto-all

Source-Repository head
    Type:       git
    Location:   git://github.com/kaoskorobase/hsc3-server-internal.git
